--- a/package.json
+++ b/package.json
@@ -24,9 +24,13 @@
     "react-chartjs-2": "5.2.0",
     "react-dom": "^18.2.0",
     "react-github-btn": "1.4.0",
+    "react-redux": "^9.1.0",
     "react-router-dom": "^6.22.2",
     "react-scripts": "5.0.1",
     "react-table": "7.8.0",
+    "redux": "^5.0.1",
+    "redux-devtools-extension": "^2.13.9",
+    "redux-thunk": "^3.1.0",
     "stylis": "4.1.4",
     "stylis-plugin-rtl": "^2.0.2",
     "tailwindcss": "^3.4.1",
